--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <java.version>11</java.version>
+        <graphql.version>5.0.2</graphql.version>
+        <graphql-tools.version>5.2.4</graphql-tools.version>
     </properties>
 
     <dependencies>
@@ -65,6 +67,21 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>${graphql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphiql-spring-boot-starter</artifactId>
+            <version>${graphql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-tools</artifactId>
+            <version>${graphql-tools.version}</version>
         </dependency>
     </dependencies>
 
